Estilizando app (parte 2)

--- a/03-project-curso/src/App.css
+++ b/03-project-curso/src/App.css
@@ -11,13 +11,13 @@
 }
 
 .label {
+  color:gray;
+}
+
+.male {
   color: skyblue;
 }
 
-.positivo {
-  color: #4FFF60;
-}
-
-.negativo {
-  color: #FF5977;
+.female {
+  color: pink;
 }
