Cambio: Información de Usuarios de ejemplo, a un Blog ficticio

--- a/03-project-curso/src/components/articulo/articulo.css
+++ b/03-project-curso/src/components/articulo/articulo.css
@@ -1,4 +1,4 @@
- .usuario {
+ .articulo {
   background: rgba(255, 255, 255, 0.04);
   border: 1px solid rgba(255, 255, 255, 0.08);
   border-radius: 8px;
@@ -7,17 +7,21 @@
   border-left: skyblue 2px solid;
 }
 
-.usuario:hover {
+.articulo:hover {
   background: rgba(255, 255, 255, 0.08);
   border: 1px solid rgba(255, 255, 255, 0.4);
   box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.35);
 }
 
-.usuario .info {
+.articulo .info {
   color: #D2D2D5
 }
 
-.usuario h2, .usuario a {
+.articulo h2, .articulo a {
   color: white;
   text-decoration: none;
+}
+
+.articulo-body{
+    font-size: 1.5rem;
 }
