--- a/03-project-curso/src/components/Cuadricula.css
+++ b/03-project-curso/src/components/Cuadricula.css
@@ -4,7 +4,7 @@
   margin: auto;
 }
 
-.usuario-container{
+.articulo-container{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1.5rem;
